# SmartQuoteBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  dummy.env  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: build-dev.yml  build-prod.yml  docker-multiarch.yml
ai_processing/: classifier.ipynb  rknn_conversion.ipynb  semantic_search.ipynb
ai_processing/input_data/: hungarian_classification_dataset.jsonl
ai_processing/output_data/: rknn_conversion.ipynb
data/: quotes.index  quotes.json
docs/: OrangePi3B_SATA_SSD_boot_tutorial.md
docs/design_and_thinking/: learning_and_using_DDD.md
docs/thoughts/: self_note_about_task partition.md
docs/wiki/: learning_and_using_DDD.md
requirements/: dev_requirements.txt
scripts/: dev_up.py  utils.py
src/: bot.py  config.py  main.py  paths.py  service_manager.py  startup.py
src/app/bot/: bot.py  startup.py
src/app/cogs/: quotes.py
src/cogs/: quotes.py
src/common/: config.py
src/common/interfaces/: connection_provider.py  embedder.py  lazy_loadable.py  vector_store.py  (+1 more)
src/discord_bot/: ui.py
src/discord_bot_service/: config.py
src/embedding_service/: config.py  service.py
src/smartquotebot/: bot.py  config.py  startup.py
src/utils/: QuoteManager.py  data_collector.py  embedder.py  faiss_handler.py  math.py  storage.py  vector_store.py
src/vector_store_service/: __init__.py  config.py  embedders.py  service.py  vector_store_factory.py
tests/unit_tests/: conftest.py  test_bot.py  test_quotes.py  test_startup.py  test_storage.py
(+12 files in other folders)
